--- a/view_files.html
+++ b/view_files.html
@@ -139,13 +139,14 @@
 <ul>
     {% for file in files %}
     <li>
-        <a href="{{ file[0] }}" {{ 'download' if not file[2] else '' }}>{{ file[1] }}</a>
+        <a href="{{ file[0] | e}}" {{ 'download' if not file[2] else '' }}>{{ file[1] | e}}</a>
         {% if not file[2] %}
-        <button onclick="deleteFile('{{ file[0] }}')">Delete</button>
+        <button onclick="deleteFile('{{ file[0] | e}}')">Delete</button>
         {% endif %}
     </li>
     {% endfor %}
 </ul>
+
 <form id="uploadForm">
     <input type="file" name="file" id="fileInput" multiple>
     <input type="button" value="Upload" onclick="uploadFile()">
@@ -159,6 +160,39 @@
 
 
 <script>
+
+    function rename(file, name) {
+        var xhr = new XMLHttpRequest();
+        xhr.open("POST", "/upload?path={{ current_path }}/" + file, true);
+        xhr.setRequestHeader("Rename", name);
+        xhr.send();
+        xhr.onload = function () {
+            if (xhr.status != 200) {
+                alert("Failed to rename file: " + xhr.responseText);
+                location.reload();
+                return;
+            }
+            alert("File rename successfully!");
+            location.reload();
+        }
+    }
+
+    function create_directory(name) {
+        var xhr = new XMLHttpRequest();
+        xhr.open("POST", "/upload?path={{ current_path }}", true);
+        xhr.setRequestHeader("Directory", name);
+        xhr.send();
+        xhr.onload = function () {
+            if (xhr.status != 200) {
+                alert("Failed to create directory: " + xhr.responseText);
+                location.reload();
+                return;
+            }
+            alert("Directory create successfully!");
+            location.reload();
+        }
+    }
+
     resetProgress();
     function deleteFile(path) {
         if (!confirm("Are you sure to delete this file?")) {
