--- a/view_files.html
+++ b/view_files.html
@@ -250,9 +250,9 @@
 
         .mkdir-container {
             position: absolute;
-            top: 50%; /* 将容器的顶部定位到标题容器的一半高度 */
-            margin-right: -60%; /* 定位到容器的右侧 */
-            transform: translateY(-10%); /* 向上移动容器高度的50%，以实现底部对齐 */
+            top: 50%;
+            margin-right: -60%;
+            transform: translateY(-10%);
             display: flex;
         }
     </style>
