--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             xhr.send();
             xhr.onload = function () {
                 if (xhr.status != 200) {
-                    alert("Failed to register: " + xhr.responseText);
+                    alert("Failed to register: " + xhr.statusText);
                     return;
                 }
                 alert("Register successfully!");
