--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             xhr.send();
             xhr.onload = function () {
                 if (xhr.status != 200) {
-                    alert("Failed to login: " + xhr.responseText);
+                    alert("Failed to login: " + xhr.statusText);
                     return;
                 }
                 alert("Login successfully!");
