--- a/view_files.html
+++ b/view_files.html
@@ -323,7 +323,7 @@
 <div class="title">
     <h1>{{ current_path }}</h1>
     <div class="mkdir-container">
-        <label for="mkdirInput"></label><input type="text" placeholder="newFolder" id="mkdirInput">
+        <label for="mkdirInput"></label><input type="text" placeholder="New Folder" id="mkdirInput">
         <button id="mkdirButton" onclick="create_directory(document.getElementById('mkdirInput').value)">Create Folder
         </button>
     </div>
@@ -371,6 +371,8 @@
 
 <script>
     function get_size(size_byte) {
+        if (size_byte < 0)
+            return "Directory";
         if (size_byte < 1024)
             return size_byte + "B";
         else if (size_byte < 1024 * 1024)
